@@ -55,3 +55,5 @@ Temporary Items
 .idea/jhe_vimeo.iml
 .idea/dictionaries/jari_hermann_ernst.xml
 .idea/deployment.xml
+.idea/sqldialects.xml
+.idea/sqldialects.xml
