@@ -129,7 +129,7 @@ $TCA['tx_jhevimeo_domain_model_videolist'] = array(
 			'config' => array(
 				'type' => 'select',
 				'foreign_table' => 'tx_jhevimeo_domain_model_video',
-				'MM' => 'tx_jhevimeo_videolist_video_mm',
+				'MM' => 'tx_jhevimeo_video_videolist_mm',
 				'size' => 10,
 				'autoSizeMax' => 30,
 				'maxitems' => 9999,
