@@ -7,15 +7,11 @@ Tx_Extbase_Utility_Extension::configurePlugin(
 	$_EXTKEY,
 	'Pi1',
 	array(
-		'Video' => 'list, show, new, create, edit, update, delete',
 		'VideoList' => 'list, show, new, create, edit, update, delete',
-		
 	),
 	// non-cacheable actions
 	array(
-		'Video' => 'create, update, delete',
 		'VideoList' => 'create, update, delete',
-		
 	)
 );
 
@@ -24,14 +20,10 @@ Tx_Extbase_Utility_Extension::configurePlugin(
 	'Pi2',
 	array(
 		'Video' => 'list, show, new, create, edit, update, delete',
-		'VideoList' => 'list, show, new, create, edit, update, delete',
-		
 	),
 	// non-cacheable actions
 	array(
 		'Video' => 'create, update, delete',
-		'VideoList' => 'create, update, delete',
-		
 	)
 );
 
