@@ -99,16 +99,3 @@ CREATE TABLE tx_jhevimeo_video_videolist_mm (
 	KEY uid_local (uid_local),
 	KEY uid_foreign (uid_foreign)
 );
-
-#
-# Table structure for table 'tx_jhevimeo_videolist_video_mm'
-#
-CREATE TABLE tx_jhevimeo_videolist_video_mm (
-	uid_local int(11) unsigned DEFAULT '0' NOT NULL,
-	uid_foreign int(11) unsigned DEFAULT '0' NOT NULL,
-	sorting int(11) unsigned DEFAULT '0' NOT NULL,
-	sorting_foreign int(11) unsigned DEFAULT '0' NOT NULL,
-
-	KEY uid_local (uid_local),
-	KEY uid_foreign (uid_foreign)
-);
