@@ -1,3 +1,7 @@
+2015-12-04 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.0
+
+	* Implemented the correct m:n functionality between videos and video lists
+
 2015-12-03 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.0
 
 	* Replaced the standard icons with vimeo ones
